k8s/ingress/production-ingress.yaml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      cert-manager.io/cluster-issuer: ifra-docs-cluster-issuer
    name: production-ifra-docs-ingress
    namespace: production
  spec:
    tls:
      - hosts:
        - docs.ifra.io
        secretName: ifra-docs-tls
    rules:
      - host: docs.ifra.io
        http:
          paths:
            - backend:
                serviceName: ifra-docs-service
                servicePort: 80
              path: /
